client/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
