client/client-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: client-route
spec:
  to:
    kind: Service
    name: client-service
  port:
    targetPort: 80
  tls:
    termination: edge
